fixed reload on create group and fixed overflow of text

--- a/assets/css/group.css
+++ b/assets/css/group.css
@@ -91,6 +91,10 @@
 
 .group-info p {
     color: var(--light_text);
+    max-width: 900px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .group-info div {
