--- a/assets/css/study-groups.css
+++ b/assets/css/study-groups.css
@@ -106,6 +106,7 @@
     display: grid;
     grid-template-rows: 2fr 3fr 1fr;
     margin: 0px;
+
 }
 
 .group h1 {
@@ -145,7 +146,10 @@
 
 
 .group p {
-
+    max-width: 300px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     padding-left: 30px;
     padding-right: 20px;
     padding-top: 30px;
